--- a/Runkeeper Weight Tracker/res/layout/main.xml
+++ b/Runkeeper Weight Tracker/res/layout/main.xml
@@ -6,7 +6,7 @@
     >
 
 <TextView android:id="@+id/WeightLabel" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/WeightLabel"></TextView>
-<EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:inputType="numberDecimal" android:id="@+id/WeightTextField">
+<EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:inputType="numberDecimal" android:id="@+id/WeightTextField" android:numeric="decimal">
     <requestFocus></requestFocus>
 </EditText>
 <TextView android:id="@+id/BodyFatLabel" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/BodyFatLabel"></TextView>
