--- a/Runkeeper Weight Tracker/res/menu/menu.xml
+++ b/Runkeeper Weight Tracker/res/menu/menu.xml
@@ -3,5 +3,6 @@
   xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/Settings" android:title="Settings"></item>
     <item android:id="@+id/Logout" android:title="Logout"></item>
+    <item android:title="@string/AddWeight" android:id="@+id/AddWeight"></item>
     
 </menu>
